--- a/index.html
+++ b/index.html
@@ -270,10 +270,10 @@
 
 <p>The Alice Project was born in 2015 as part of #CollateralFreedom, a movement launched by Reporters Without Borders (RWB) for fight against censorship. Its goal? Provide an easier way to deploy proxy for people to bypass cybercensorship operated in some countries.
 Why this project is named &quot;Alice&quot;? Do you remember Alice in Wonderland? The story by Lewis Carrol? Let us introduce you to Alice on the other side of the mirror!
-The first version of Alice was developed during an event at La Cantine Numérique Brest | France <a href='https://twitter.com/andaolvras'>@andaolvras on Twitter</a>. The third edition in 2017 add some great features like :
-- Auto deployment via bash script</p>
-- HTTPS (Thanks to Letsencrypt and Caddy Server)
-- Caching (Caddy PLugin)
+The first version of Alice was developed during an event at La Cantine Numérique Brest | France <a href='https://twitter.com/andaolvras'>@andaolvras on Twitter</a>. The third edition in 2017 add some great features like:</p>
+<li>- Auto deployment via bash script</li>
+<li>- HTTPS (Thanks to Letsencrypt and Caddy Server)</li>
+<li>- Caching (Caddy PLugin)</li>
 <h1 id='technologies'>Technologies</h1>
 <p>Here are the technologies Alice is using:</p>
 
