--- a/index.html
+++ b/index.html
@@ -286,8 +286,10 @@ The first version of Alice was developed during an event at La Cantine Numériqu
 </ul>
 <h1 id='installation'>Installation</h1><h2 id='prerequisites'>Prerequisites</h2>
 <blockquote>
-<p>add curl to debian:</p>
+<p>add curl to debian and first of all, update your system</p>
 </blockquote>
+<pre class="highlight shell"><code>sudo apt update
+</code></pre>
 <pre class="highlight shell"><code>sudo apt-get install curl
 </code></pre>
 <p>You are going to need:</p>
